--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
       content="Web site created using create-react-app"
     />
     <title>Search Items</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style type="text/tailwindcss">
+      @layer utilities {
+        .content-auto {
+          content-visibility: auto;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
