--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <title>Search Items</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
     <style type="text/tailwindcss">
       @layer utilities {
         .content-auto {
@@ -22,5 +23,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://flowbite.com/docs/flowbite.js?v=1.4.7a"></script>
   </body>
 </html>
